--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,26 @@
     android:layout_centerVertical="false"
     android:background="@android:color/black"
     tools:context=".MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_movies"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_vertical|center_horizontal|center"
-        android:layout_margin="8dp"
-        android:fadeScrollbars="true"
-        android:scrollbars="vertical"
-        tools:context=".MainActivity" />
-
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tv_heading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/top_20"
+            android:textColor="@android:color/white"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_movies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical|center_horizontal|center"
+            android:layout_margin="8dp"
+            android:fadeScrollbars="true"
+            android:scrollbars="vertical"
+            tools:context=".MainActivity" />
+    </LinearLayout>
+    <!--TODO addProgressBar-->
+    <!--TODO addErrorMessage-->
 </FrameLayout>
