--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -14,5 +14,5 @@
         android:orderInCategory="2"
         app:showAsAction="ifRoom"
         android:title="@string/about"/>
-        <!--TODO add moviedb attribution here in about-->
+    <!--TODO change grid-->
 </menu>
