--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,21 @@
             tools:context=".MainActivity" />
     </LinearLayout>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <!--TODO addProgressBar-->
-    <!--TODO addErrorMessage-->
+        android:id="@+id/error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:visibility="gone"
+        android:textStyle="bold"
+        android:textColor="@android:color/holo_red_light"
+        />
+    <ProgressBar
+        android:id="@+id/pb_load_movies"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:visibility="gone">
+    </ProgressBar>
+
 </FrameLayout>
