--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:padding="@dimen/padding_details">
 
             <TextView
                 android:id="@+id/tv_movie_title"
@@ -24,16 +24,16 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_vertical|center_horizontal"
-                android:paddingBottom="2dp"
-                android:paddingTop="8dp"
+                android:paddingBottom="@dimen/padding_details_bottom"
+                android:paddingTop="@dimen/padding_details"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                 android:textStyle="bold" />
             <TextView
                 android:id="@+id/tv_original_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:layout_margin="8dp"
+                android:padding="@dimen/padding_details_bottom"
+                android:layout_margin="@dimen/margin_rv_main"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_vertical|center_horizontal"
                 android:textStyle="bold" />
@@ -136,7 +136,7 @@
                 android:id="@+id/tv_overview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"/>
+                android:layout_margin="@dimen/padding_details"/>
         </LinearLayout>
     </ScrollView>
 
