--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -128,6 +128,12 @@
                         android:layout_row="2"
                         android:padding="2dp" />
 
+                    <ToggleButton
+                        android:id="@+id/tb_favourite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"/>
+
 
                 </GridLayout>
             </LinearLayout>
