--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,4 +4,21 @@
         <item>Most Popular</item>
         <item>Top Rated</item>
     </string-array>
+    <string-array name="pref_num_col_options">
+        <item>Single Movie</item>
+        <item>Two Movies</item>
+        <item>Three Movies</item>
+        <item>Four Movies</item>
+        <item>Five Movies</item>
+        <item>Six Movies</item>
+    </string-array>
+    <string-array name="pref_num_col_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
 </resources>
