--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -128,11 +128,25 @@
                         android:layout_row="2"
                         android:padding="2dp" />
 
-                    <ToggleButton
-                        android:id="@+id/tb_favourite"
+                    <FrameLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:checked="false"/>
+                        android:layout_height="wrap_content">
+                        <ImageView
+                            android:id="@+id/iv_favourite_on"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_favorite_red_24dp"
+                            android:clickable="true"
+                            android:visibility="invisible"/>
+                        <ImageView
+                            android:id="@+id/iv_favourite_off"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_favorite_border_red_24dp"
+                            android:clickable="true"
+                            android:visibility="visible"/>
+                    </FrameLayout>
+
 
 
                 </GridLayout>
