--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_centerInParent="true"
     android:layout_centerVertical="false"
     android:background="@android:color/black"
-    tools:context=".MainActivity">
+    tools:context=".ui.movielistings.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,7 +26,7 @@
             android:layout_margin="@dimen/margin_rv_main"
             android:fadeScrollbars="true"
             android:scrollbars="vertical"
-            tools:context=".MainActivity" />
+            tools:context=".ui.movielistings.MainActivity" />
     </LinearLayout>
     <TextView
         android:id="@+id/error_message"
