--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:layout_centerVertical="true"
-    tools:context=".MovieDetailsActivity">
+    tools:context=".ui.moviedetails.MovieDetailsActivity">
 
     <ScrollView
         android:layout_width="match_parent"
