--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -137,14 +137,16 @@
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_favorite_red_24dp"
                             android:clickable="true"
-                            android:visibility="invisible"/>
+                            android:visibility="invisible"
+                            android:focusable="true" />
                         <ImageView
                             android:id="@+id/iv_favourite_off"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:src="@drawable/ic_favorite_border_red_24dp"
                             android:clickable="true"
-                            android:visibility="visible"/>
+                            android:visibility="visible"
+                            android:focusable="true" />
                     </FrameLayout>
 
 
