--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -10,10 +10,12 @@
     </item>
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_refresh"
         android:orderInCategory="2"
-        app:showAsAction="never"
-        android:title="@string/title_activity_settings"/>
+        app:showAsAction="ifRoom"
+        android:title="@string/title_activity_refresh"
+        android:icon="@drawable/ic_refresh_accent_24dp"
+        />
 
     <item
         android:id="@+id/action_about"
