--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -164,9 +164,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical|center"
                 android:fadeScrollbars="false"
-                android:scrollbars="horizontal">
+                android:scrollbars="horizontal"
+                android:paddingHorizontal="8dp">
             </android.support.v7.widget.RecyclerView>
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_reviews"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical|center"
+                android:fadeScrollbars="false"
+                android:scrollbars="horizontal">
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </ScrollView>
 
