--- a/app/src/main/res/layout/movie_review_item.xml
+++ b/app/src/main/res/layout/movie_review_item.xml
@@ -8,21 +8,35 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@android:color/black"
+        android:layout_marginTop="16dp"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author:"
             android:padding="2dp"
-            android:textStyle="bold"/>
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="#80CBC4"/>
         <TextView
             android:id="@+id/tv_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="2dp"/>
+            android:padding="2dp"
+            android:textSize="16sp"
+            android:textColor="#80CBC4"/>
     </LinearLayout>
     <TextView
         android:id="@+id/tv_review"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tv_more_review"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Show More"
+        android:textColor="#80CBC4"/>
+
 </LinearLayout>
