--- a/app/src/main/res/layout/movie_trailer_item.xml
+++ b/app/src/main/res/layout/movie_trailer_item.xml
@@ -12,5 +12,6 @@
         android:layout_gravity="center_horizontal"
         android:background="@android:color/black"
         android:scaleType="fitCenter"
-        android:contentDescription= "@string/the_movie_trailer_poster" />
+        android:contentDescription= "@string/the_movie_trailer_poster"
+        android:paddingHorizontal="8dp"/>
 </FrameLayout>
