--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,15 +22,30 @@
             android:scrollbars="vertical"
             tools:context=".ui.movielistings.MainActivity" />
     </LinearLayout>
-    <TextView
-        android:id="@+id/error_message"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:visibility="gone"
-        android:textStyle="bold"
-        android:textColor="@android:color/holo_red_light"
-        />
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/error_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_error_outline_red_24dp"
+            android:padding="8dp"
+            android:contentDescription="@string/network_unavailable" />
+        <TextView
+            android:id="@+id/error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:visibility="gone"
+            android:textStyle="bold"
+            android:padding="8dp"
+            android:textColor="@android:color/primary_text_dark"
+            />
+
+    </LinearLayout>
     <ProgressBar
         android:id="@+id/pb_load_movies"
         style="@style/Widget.AppCompat.ProgressBar"
