--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -65,13 +65,15 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_event_available_24dp"
                     android:padding="2dp"
-                    android:contentDescription="Calendar Icon" />
+                    android:contentDescription="@string/calendar_icon" />
                 <TextView
                     android:id="@+id/tv_released_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
                     android:paddingRight="12dp"
+                    android:paddingLeft="2dp"
+                    android:paddingStart="2dp"
                     android:paddingEnd="12dp" />
 
 
@@ -80,29 +82,31 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_star_border_24dp"
                     android:padding="2dp"
-                    android:contentDescription="Rating Icon" />
+                    android:contentDescription="@string/rating_icon" />
 
                 <TextView
-                        android:id="@+id/tv_user_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="18sp"
-                        android:paddingRight="24dp"
-                    android:paddingEnd="24dp" />
+                    android:id="@+id/tv_user_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:paddingRight="12dp"
+                    android:paddingLeft="2dp"
+                    android:paddingStart="2dp"
+                    android:paddingEnd="12dp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_favorite_border_24dp"
                     android:padding="2dp"
-                    android:contentDescription="Popular Icon" />
+                    android:contentDescription="@string/popular_icon" />
 
                     <TextView
                         android:id="@+id/tv_popularity_rating"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="2dp"
-                        android:textSize="18sp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:textSize="18sp"/>
 
             </LinearLayout>
 
@@ -142,8 +146,10 @@
                 android:layout_gravity="center_horizontal|center_vertical|center"
                 android:fadeScrollbars="false"
                 android:scrollbars="horizontal"
-                android:paddingHorizontal="8dp"
-                android:layout_marginVertical="16dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 >
             </android.support.v7.widget.RecyclerView>
 
